<resources>
    <string name="app_name">PreSec</string>
    <string name="imageDescriptionLogo">LogoImage</string>
    <string name="textViewLoading">Loading&#8230;</string>
    <string name="buttonViewLogin">Login</string>
    <string name="buttonViewSignUp">Sign Up</string>
    <string name="textViewOr">or</string>
    <string name="hintEmail">Email Id</string>
    <string name="hintName">Name</string>
    <string name="hintNumber">Phone Number</string>
    <string name="textViewAskMode">Type of User</string>
    <string name="radioButtonDoctor">Doctor</string>
    <string name="radioButtonPharmacy">Pharmacy</string>
    <string name="radioButtonPatient">Patient(User)</string>
    <string name="textViewAskGender">Gender</string>
    <string name="radioButtonMale">Male</string>
    <string name="radioButtonFemale">Female</string>
    <string name="radioButtonLGBTQ">Would not like\n to mention</string>
    <string name="textViewAskBloodGroup">BloodGroup</string>
    <string name="radioButtonAplus">A +ve</string>
    <string name="radioButtonAminus">A -ve</string>
    <string name="radioButtonBplus">B +ve</string>
    <string name="radioButtonBminus">B -ve</string>
    <string name="radioButtonABplus">AB +ve</string>
    <string name="radioButtonABminuus">AB -ve</string>
    <string name="radioButtonOplus">O +ve</string>
    <string name="radioButtonOminus">O -ve</string>
    <string name="hintAllergies">Allergies</string>
    <string name="checkBoxTandC">I Accept all Terms &amp; Conditions</string>
    <string name="hintRegistrationNumber">Registration Number</string>
    <string name="hintLicenceNumber">Licence Number</string>
    <string name="hintAddress">Address</string>
    <string name="hintPassword">Password</string>
    <string name="buttonViewTermsAndConditions">Terms &amp; Conditions</string>
    <string name="buttonViewAboutUs">About Us</string>
    <string name="buttonViewLogOut">Log Out</string>
    <string name="textViewPatientId">Patient Id</string>
    <string name="blankSpace"> </string>
    <string name="randomText"> </string>
    <string name="textViewPatientName">Patient Name</string>
    <string name="textViewDate">Date</string>
    <string name="textViewAge">Age</string>
    <string name="textViewAllergies">Allergies</string>
    <string name="textViewSymptoms">Symptoms</string>
    <string name="textViewMedicine">Medicine</string>
    <string name="textViewTimings">Medicine       \nTimings</string>
    <string name="checkBoxMorning">Morning</string>
    <string name="checkBoxAfternoon">Afternoon</string>
    <string name="checkBoxEvening">Evening</string>
    <string name="textViewQuantity">Medicine Qty.</string>
    <string name="buttonViewCreatePrescription">Create Prescription</string>
    <string name="textViewBloodGroup">Blood Group</string>
    <string name="textViewForDoctor">Do not add \'Dr.\' in your name, it will be added\n automatically</string>
    <string name="textViewHeight">Height</string>
    <string name="textViewWeight">Weight</string>
    <string name="textViewDuration">Duration</string>
    <string name="textViewDurationHint">(in days and mention\npattern of medicine if any)</string>
    <string name="hintDoB">Date of Birth(yyyy-mm-dd)</string>
    <string name="hintHeight">Height (in feet)</string>
    <string name="hintWeight">Weight (in kgs)</string>
    <string name="textViewPrescriptionID">Prescription ID</string>
    <string name="textViewDoctorName">Doctor Name</string>
    <string name="textViewMedicineQty_ViewPrescription">Quantity</string>
    <string name="TextViewMedicineTime_ViewPrescription">Timings</string>
    <string name="TextViewDuration_ViewPrescription">Duration</string>
    <string name="HintQRDisplay">Scan the above QR Code by Pharmacy to get the required medicines!</string>
    <string name="QRDisplay">QR to display Prescription Id</string>
    <string name="hyphen">  -  </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="ProfileClipart">Profile Clipart</string>
    <string name="Email_ID">Email</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="Password">Password</string>
    <string name="PasswordValue">******</string>
    <string name="EditButtonTitle">Edit Profile</string>
    <string name="MyProfileOption">My Profile</string>
    <string name="ChangePass">Change Password</string>
    <string name="EditTextCurrentPass">Current Password</string>
    <string name="EditTextNewPass">New Password</string>
    <string name="EditTextConfirmPass">Confirm Password</string>
    <string name="showPasswordText">SHOW</string>
    <string name="sign_up_text">Take your first step with Us …</string>
    <string name="sign_up_picture">Sign Up Picture</string>
    <string name="login_to_continue">Login to Continue…</string>
    <string name="log_in_picture">Log In Picture</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="image_start_pages">Image Start Pages</string>
    <string name="id">ID</string>
    <string name="if_no_prescription_of_doctor">Prescriptions made by you will\nbe seen here</string>
    <string name="if_no_prescriptions_patient_prescription_list">Your prescriptions will be\nseen here</string>
    <string name="textViewAboutUsTitle">About Us:</string>
    <string name="todo">TODO</string>
    <string name="success">SUCCESS</string>
</resources>