<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ChangePass"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/CurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:hint="@string/EditTextCurrentPass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/NewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints="false"
        android:hint="@string/EditTextNewPass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints="false"
        android:hint="@string/EditTextConfirmPass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/ChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/ChangePass"
        android:textColor="@android:color/white" />

</LinearLayout>