<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0091EA"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/buttonLogin_LoginPage"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/circle_shape"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/buttonViewLogin"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword_LoginPage"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewLoginIn"
        android:layout_width="250dp"
        android:layout_height="186dp"
        android:contentDescription="@string/log_in_picture"
        android:src="@drawable/login_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login_to_continue"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLoginIn"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEmail_LoginPage"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@android:string/yes"
        android:background="@drawable/circle_shape"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLogin"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextPassword_LoginPage"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@android:string/yes"
        android:background="@drawable/circle_shape"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:importantForAutofill="yes"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail_LoginPage"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/ToggleTextView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/showPasswordText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/editTextPassword_LoginPage"
        app:layout_constraintRight_toRightOf="@id/editTextPassword_LoginPage"
        app:layout_constraintTop_toTopOf="@id/editTextPassword_LoginPage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewOr"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin_LoginPage"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/buttonSignUp_LoginPage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_shape"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/create_new_account"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin_LoginPage"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>